[project]
name = "openai-agents-sdk-tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "neocypher",email = "5590838+neocypher-x@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-agents (>=0.2.4,<0.3.0)",
    "rich (>=14.1.0,<15.0.0)",
    "doppler-env (>=0.3.1,<0.4.0)",
    "ddgs (>=9.5.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
